[ferrous-systems-workshop] async, c ffi, macros, ferrous-systems-workshop complete.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 
-members = ["ferrous-systems-workshop", "lists"]
+members = [
+        "ferrous-systems-workshop",
+        "lists",
+        "calling-rust-from-c",
+        "calling-c-from-rust"
+        ]
