--- a/calling-c-from-rust/Cargo.toml
+++ b/calling-c-from-rust/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "ferrous-systems-workshop"
+name = "calling-c-from-rust"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-async-std = "1.11.0"
