--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
         "ferrous-systems-workshop",
         "lists",
         "calling-rust-from-c",
-        "calling-c-from-rust"
+        "calling-c-from-rust",
+        "rust-design-patterns"
         ]
